WIP: fix distorted back image on mobile

--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -40,6 +40,7 @@ body {
   background: url('images/nikita-kachanovsky-OVbeSXRk_9E-unsplash.jpg') 0 80%/cover no-repeat;
   overflow: hidden;
   position: relative;
+  width: 100vw;
 
   .my-name,
   .language,
